# Plotter2D

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  makefile
.github/workflows/: c-cpp.yml
evaluation/: function_evaluator.cpp  function_evaluator.h
interface/: plotter2d.cpp  plotter2d.h
model/: plot_model.cpp  plot_model.h
parser/: function_parser.cpp  function_parser.h  parsed_function.h
visualization/: visualization.cpp  visualization.h
